--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 $(function(){
      $(window).resize(function(){
          if($(this).width() >= 767){
-             $.backstretch("FullSizeRender 2.jpeg", {speed: 150});
+             $.backstretch("Background.jpeg", {speed: 150});
          }
       })
       .resize();//trigger resize on page load
