--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 	<meta http-equiv="pragma" content="no-cache" />
 	<meta name="robots" content="all" />
-	<meta name="MSSmartTagsPreventParsing" content="true" />
 	<meta http-equiv="imagetoolbar" content="false" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!--[if lt IE 9]>
@@ -24,7 +23,7 @@
 		@media (max-width: 767px) {
 			#monogram { position: relative; width: auto; padding: 20px; margin: 0; }
 			#about { position: relative; width: auto; padding: 20px; margin: 0 !important; }
-			background-image { opacity: 0.2; }
+			background-image { opacity: 1.0; }
 		}
 =======
 		
@@ -42,9 +41,9 @@
 <!-- swap out for information about yourself -->
 <div id="about">
 	<p>John Madeira is a product manager at <a href="http://alphahq.com">Alpha</a>, a research tech company based in New York City.<p> 
-	<p>Outside of his day job, John enjoys building products that marry technology with his two passions -  social change and the outdoors. He is currently working on a product marrying mapping technology with bathymetric, wind, and swell data to help enterprising surfers discover new waves on the coast of Maine</p>
-	<p>In his free time, he surfs, skis, and champions progressive politics, organizing on behalf of environmental justice, access to healthcare, and anti-racism. Check him out on <a href="https://www.goodreads.com/user/show/115168858-john-madeira">Goodreads</a> to see what he's reading this week.
-	<p> Raised and educated in the great state of Maine, John spent 6 years living and working in Washington, D.C. and NYC in social change and technology before making his way home.</p> 
+	<p>Outside of his day job, John enjoys working with friends to build technology that relates to his two passions -  social change and the outdoors. He is currently working on a product marrying mapping technology with bathymetric, wind, and swell data to help enterprising surfers discover new waves on the coast of Maine</p>
+	<p>In his free time, he surfs, skis, and champions progressive politics. He's working on how to be a better ally to underrepresented populations in the workplace. Check him out on <a href="https://www.goodreads.com/user/show/115168858-john-madeira">Goodreads</a> to see what he's reading this week.
+	<p> Raised and educated in the great state of Maine, John spent 6 years living and working in Washington, D.C. and NYC in social change and technology. He's currently living back in Maine and pretty happy about it!</p> 
 </div>
 
 <!--include jquery & backstretch-->
