--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>J.M.</title>
+	<title>howdy</title>
 	<title></title>
 	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 	<meta http-equiv="pragma" content="no-cache" />
@@ -14,7 +14,7 @@
 	<![endif]-->	
 	<style>
 		* { padding: 0; margin: 0; }
-		body { background-color: #333; }
+		body { background-attachment: fixed !important; background-clip: border-box; background-color: transparent; background-image: url("Background.jpeg"); background-origin: padding-box;background-position: left center;background-repeat: no-repeat;background-size: cover }
 		p { color: #fff; font-family: Helvetica; font-size: 16px; line-height: 24px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
 		a { color: #fff; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(255,255,255,0.3); }
 		a:hover { color: #990000; border-bottom: 1px solid rgba(255,255,255,1); }
@@ -37,8 +37,6 @@
 <div id="monogram">
 	<img src="" />
 </div>
-
-<!-- swap out for information about yourself -->
 <div id="about">
 	<p>John Madeira is a product manager at <a href="http://alphahq.com">Alpha</a>, a research tech company based in New York City.<p> 
 	<p>Outside of his day job, John enjoys working with friends to build technology that relates to his two passions -  social change and the outdoors. He is currently working on a product marrying mapping technology with bathymetric, wind, and swell data to help enterprising surfers discover new waves on the coast of Maine</p>
@@ -46,14 +44,7 @@
 	<p> Raised and educated in the great state of Maine, John spent 6 years living and working in Washington, D.C. and NYC in social change and technology. He's currently living back in Maine and pretty happy about it!</p> 
 </div>
 <!--include jquery & backstretch-->
-background-attachment: fixed !important;
-background-clip: border-box;
-background-color: transparent;
-background-image: url("Background.jpeg");
-background-origin: padding-box;
-background-position: left center;
-background-repeat: no-repeat;
-background-size: cover
+
 </script>
 
 </body>	
