--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<![endif]-->	
 	<style>
 		* { padding: 0; margin: 0; }
-		body { background-attachment: fixed !important; background-clip: border-box; background-color: transparent; background-image: url("Background.jpeg"); background-origin: padding-box;background-position: left center;background-repeat: no-repeat;background-size: cover }
+		body { background-attachment: fixed !important; background-clip: border-box; background-color: transparent; background-image: url("Background.jpeg"); background-origin: padding-box;background-position: left center;background-repeat: no-repeat;background-size: auto }
 		p { color: #fff; font-family: Helvetica; font-size: 16px; line-height: 24px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
 		a { color: #fff; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(255,255,255,0.3); }
 		a:hover { color: #990000; border-bottom: 1px solid rgba(255,255,255,1); }
@@ -23,7 +23,7 @@
 		@media (max-width: 767px) {
 			#monogram { position: relative; width: auto; padding: 20px; margin: 0; }
 			#about { position: relative; width: auto; padding: 20px; margin: 0 !important; }
-			background-image { opacity: 1.0; }
+			background-image { opacity: .2; }
 		}
 =======
 		
